--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "journal2",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "expo-router/entry-classic.js",
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
@@ -24,7 +24,8 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
